--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Daniel Wyatt
-email: '&#68;&#97;&#110;&#105;&#101;&#108;&#46;&#87;&#121;&#97;&#116;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;'
+email: '&#100;&#101;&#119;&#121;&#97;&#116;&#116;&#109;&#97;&#105;&#108;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109'
 description: >
   DevOps Professional, Cloud Engineer, Embedded Enthusiast.
 url: ""
