update title to include middle initial

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Daniel Wyatt
+title: Daniel E. Wyatt
 email: '&#100;&#101;&#119;&#121;&#97;&#116;&#116;&#109;&#97;&#105;&#108;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109'
 description: >
   DevOps Professional, Cloud Engineer, Embedded Enthusiast.
